--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1',  "com.codeborne:selenide:6.9.0"
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation (
+            "org.junit.jupiter:junit-jupiter:5.8.2",
+            "com.codeborne:selenide:6.9.0"
+    )
 }
 
 test {
