--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@ repositories {
 dependencies {
     testImplementation (
             "org.junit.jupiter:junit-jupiter:5.8.2",
-            "com.codeborne:selenide:6.9.0"
+            "com.codeborne:selenide:6.9.0",
+            "com.github.javafaker:javafaker:1.0.2"
     )
 }
 
